# cyber-snake

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  cyberpunk-snake.html  cyberpunk-tetris.html  docker-compose.yml  index.html  package-lock.json  package.json  server.js
.github/workflows/: check.yml  docker.yml  node.js.yml
client/: Cargo.toml  client.wasm  index.html
client/src/: input.rs  lib.rs  network.rs  render.rs  state.rs
public/: index.html
server/: Cargo.toml  Dockerfile
server/benches/: game_benchmarks.rs
server/src/: config.rs  lib.rs  main.rs
server/src/game/: bot_ai.rs  broadcast.rs  collision.rs  dominance.rs  effects.rs  food.rs  handlers.rs  highscores.rs  magnet.rs  mod.rs  pickup.rs  powerup.rs  shared_state.rs  snake.rs  snake_mgr.rs  snakes_collision.rs  spawner.rs  speed.rs  state.rs  tick.rs  wall.rs
server/src/server/: mod.rs
server/src/server/handlers/: http.rs  messages.rs  mod.rs  rate_limiter.rs  ws.rs
server/tests/: integration_tests.rs
shared/: Cargo.toml
shared/src/: food.rs  lib.rs  messages.rs  point_direction.rs  powerup.rs  snake.rs
src/: config.rs  main.rs
src/game/: food.rs  mod.rs  powerup.rs  snake.rs  state.rs
src/server/: http.rs  mod.rs  ws.rs
