[package]
name = "client"
version = "1.0.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"
futures-util = "0.3"
uuid = { version = "1.11", features = ["v4", "serde", "js"] }
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3.91"
features = [
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "BinaryType",
    "Window",
    "Location",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlElement",
    "KeyboardEvent",
    "EventTarget",
]

[dependencies.wasm-bindgen]
version = "0.2"

[dependencies.wasm-bindgen-futures]
version = "0.4"

[dev-dependencies]
criterion = "0.5"
