[package]
name = "server"
version = "1.0.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1.50", features = ["full"] }
tokio-tungstenite = { version = "0.26" }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
once_cell = "1.19"
parking_lot = "0.12"
uuid = { version = "1.11", features = ["v4"] }
directories = "6.0"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs"] }
rmp-serde = "1.3"
bytes = "1.9"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "game_benchmarks"
harness = false
